changed user details and register
