# api/openapi.json
@@ -22,37 +22,6 @@
         ]
       }
     },
-    "/api/auth/register": {
-      "post": {
-        "operationId": "register",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CredentialsDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenDto"
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "auth"
-        ]
-      }
-    },
     "/api/auth/login": {
       "post": {
         "operationId": "login",
@@ -174,35 +143,6 @@
           "status"
         ]
       },
-      "CredentialsDto": {
-        "type": "object",
-        "properties": {
-          "email": {
-            "type": "string",
-            "example": "user@example.com"
-          },
-          "password": {
-            "type": "string",
-            "minLength": 12,
-            "maxLength": 128
-          }
-        },
-        "required": [
-          "email",
-          "password"
-        ]
-      },
-      "TokenDto": {
-        "type": "object",
-        "properties": {
-          "accessToken": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "accessToken"
-        ]
-      },
       "AdfsLoginDto": {
         "type": "object",
         "properties": {
@@ -221,20 +161,13 @@
           "id": {
             "type": "string"
           },
-          "email": {
+          "username": {
             "type": "string"
-          },
-          "permissions": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
           }
         },
         "required": [
           "id",
-          "email",
-          "permissions"
+          "username"
         ]
       },
       "LoginResponseDto": {
@@ -250,6 +183,17 @@
         "required": [
           "accessToken",
           "user"
+        ]
+      },
+      "TokenDto": {
+        "type": "object",
+        "properties": {
+          "accessToken": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "accessToken"
         ]
       }
     }
