# api/src/database/schema.ts
@@ -2,9 +2,7 @@ import { pgTable, text, timestamp, uuid, varchar } from 'drizzle-orm/pg-core';
 
 export const users = pgTable('users', {
   id: uuid('id').primaryKey().defaultRandom(),
-  email: varchar('email', { length: 254 }).notNull().unique(),
-  passwordHash: text('password_hash').notNull(),
-  permissions: text('permissions').array().notNull().default([]),
+  username: varchar('username', { length: 254 }).notNull().unique(),
   createdAt: timestamp('created_at', { withTimezone: true })
     .notNull()
     .defaultNow(),
